--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,23 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "aws-sdk": "^2.1692.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "groq-sdk": "^0.9.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.8.0",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.9.124",
+    "tesseract.js": "^5.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
