--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-backend/node_modules
-backend/.env
+backend
 node_modules
 dist
 dist-ssr
